--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,19 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  functions = "functions"
 
 [dev]
   command = "npm run dev"
   port = 8888
   publish = "dist"
+  functions = "functions"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9" 
