Update core files with authentication and admin features

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,41 @@
 # Dependencies
 node_modules/
-.pnp/
-.pnp.js
+package-lock.json
+yarn.lock
 
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
+
+# IDE/Editor specific
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS specific
+.DS_Store
+Thumbs.db
+
+# Build/Deploy
+dist/
+build/
+.next/
+out/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Supabase
+.supabase/
+
+# pnp
+.pnp/
+.pnp.js
 
 # Build output
 dist/
