--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "ryft-ecommerce",
-  "version": "1.0.0",
-  "description": "Ryft - Performance Meets Street Style",
+  "name": "ryft",
+  "private": true,
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "netlify:dev": "netlify dev",
-    "netlify:build": "netlify build",
-    "netlify:deploy": "netlify deploy --prod"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "dotenv": "^16.3.1"
+    "@supabase/supabase-js": "^2.39.3",
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "netlify-cli": "^17.0.0"
+    "vite": "^5.0.12"
   }
 } 
